package prototypemode;

public class Apple extends MyFruit{
    public Apple(){
        kind = "Apple";
    }
}
