package prototypemode;

public class Banana extends MyFruit{
    public Banana(){
        kind = "Apple";
    }
}
